[gd_scene load_steps=69 format=3 uid="uid://dvsrygsjaqq7e"]

[ext_resource type="Script" uid="uid://b8imib3ohxn5n" path="res://scripts/interactable_rotation_planes.gd" id="1_k4ukj"]
[ext_resource type="Script" uid="uid://b6s65tmg6pt3i" path="res://scripts/interactable_cube.gd" id="1_np1tr"]
[ext_resource type="Material" uid="uid://dw8skocq4f01f" path="res://materials/old/rotation_plane.tres" id="2_te6jk"]
[ext_resource type="Material" uid="uid://dpe6ojv76rv0d" path="res://materials/old/rotation_plane_highlighted.tres" id="3_q83r8"]
[ext_resource type="Script" uid="uid://d0vkm7tk3rakp" path="res://scripts/cublets.gd" id="5_mwdhc"]
[ext_resource type="Material" uid="uid://dyt20tqm5x44a" path="res://materials/old/face_material_one.tres" id="6_5bekk"]
[ext_resource type="Material" uid="uid://ih1ruj8tg1fj" path="res://materials/old/green_face.tres" id="7_e54xb"]
[ext_resource type="Material" uid="uid://0ajl5h4h5pbk" path="res://materials/old/orange_face.tres" id="8_y4kj5"]
[ext_resource type="PackedScene" uid="uid://c2i58b3m6fkf0" path="res://scenes/Old/interactable_rotation_plane.tscn" id="9_2xpmb"]
[ext_resource type="PackedScene" uid="uid://t3b47lj1rvy7" path="res://scenes/Old/cubelet.tscn" id="9_sqj7i"]
[ext_resource type="PackedScene" uid="uid://xwgcjt6sgtgv" path="res://scenes/Old/switch.tscn" id="11_b33ay"]
[ext_resource type="PackedScene" uid="uid://dnluh01o141d4" path="res://scenes/Old/theremin.tscn" id="11_gdqjp"]
[ext_resource type="PackedScene" uid="uid://k7jxtfi4j4kd" path="res://scenes/Old/beat_pad.tscn" id="11_rkwiu"]
[ext_resource type="AudioStream" uid="uid://bmfkkny5ddr4y" path="res://sounds/theremin_stream_2.tres" id="12_5hwqm"]
[ext_resource type="AudioStream" uid="uid://t4o1qvlinb77" path="res://sounds/kick10.mp3" id="12_7j6b7"]
[ext_resource type="AudioStream" uid="uid://c0p7rgs3ic8pb" path="res://sounds/hithat_1.mp3" id="12_foin1"]
[ext_resource type="AudioStream" uid="uid://bngyflrqtpojp" path="res://sounds/mpc/click2.mp3" id="12_foqmi"]
[ext_resource type="AudioStream" uid="uid://k7ygnwvtdmd4" path="res://sounds/theremin_stream_3.tres" id="12_g183w"]
[ext_resource type="AudioStream" uid="uid://dxr7gjclovaou" path="res://sounds/theremin_stream_1.tres" id="12_o2m7e"]
[ext_resource type="AudioStream" uid="uid://bn82pg68lyiy3" path="res://sounds/crash.mp3" id="12_vbing"]
[ext_resource type="Script" uid="uid://cn5qc6uxwj2ot" path="res://scripts/hitzone.gd" id="13_ldtd0"]
[ext_resource type="AudioStream" uid="uid://da5jltd6pt2gu" path="res://sounds/mpc/chords7.mp3" id="13_r3l4c"]
[ext_resource type="AudioStream" uid="uid://dhjou24s33lp3" path="res://sounds/lego_click.mp3" id="13_t2dqi"]
[ext_resource type="AudioStream" uid="uid://jx664a0wct4u" path="res://sounds/mpc/hihat4.mp3" id="14_1eq0i"]
[ext_resource type="AudioStream" uid="uid://cikdivbavt5i0" path="res://sounds/snare.mp3" id="14_fj5po"]
[ext_resource type="AudioStream" uid="uid://bpn6gnaetxi73" path="res://sounds/kick9.mp3" id="14_uco0j"]
[ext_resource type="AudioStream" uid="uid://c1oahsivu0rsj" path="res://sounds/mpc/chords6.mp3" id="15_m6fha"]
[ext_resource type="AudioStream" uid="uid://dbaxm8riwinwr" path="res://sounds/mpc/beat1.mp3" id="16_m1cy3"]
[ext_resource type="AudioStream" uid="uid://bj8vcscgrn3mm" path="res://sounds/kick8.mp3" id="17_xy2l2"]
[ext_resource type="AudioStream" uid="uid://kuv0sr3wbgtg" path="res://sounds/mpc/tone1.mp3" id="18_eopfk"]
[ext_resource type="AudioStream" uid="uid://c8ixyvt81jdo8" path="res://sounds/mpc/beep1.mp3" id="19_lgxiu"]
[ext_resource type="AudioStream" uid="uid://deqr5pempk0vr" path="res://sounds/mpc/beep3.mp3" id="20_wq4h3"]
[ext_resource type="AudioStream" uid="uid://lpb83qn0jirw" path="res://sounds/mpc/hihat3.mp3" id="21_hxfuh"]
[ext_resource type="AudioStream" uid="uid://dw7i7mlclrkbl" path="res://sounds/mpc/beep2.mp3" id="22_7j8hd"]
[ext_resource type="AudioStream" uid="uid://lq0h5xpoe77d" path="res://sounds/mpc/chords8.mp3" id="24_agb0u"]
[ext_resource type="AudioStream" uid="uid://d4avpe3ascfcs" path="res://sounds/kick3.mp3" id="24_epiv1"]
[ext_resource type="AudioStream" uid="uid://21kvdivhmw24" path="res://sounds/mpc/sample1.mp3" id="25_0deu7"]
[ext_resource type="AudioStream" uid="uid://d17bg6seefqbm" path="res://sounds/snare2.mp3" id="25_8mcsb"]
[ext_resource type="AudioStream" uid="uid://ux1c3mffaov0" path="res://sounds/kick4.mp3" id="25_oaica"]
[ext_resource type="AudioStream" uid="uid://begunevcnna6v" path="res://sounds/mpc/tiss.mp3" id="26_0uidl"]
[ext_resource type="AudioStream" uid="uid://blf4l2nh7xp24" path="res://sounds/mpc/cymbal1.mp3" id="27_mwsym"]
[ext_resource type="AudioStream" uid="uid://cor4ogmkqwqg2" path="res://sounds/mpc/clap3.mp3" id="28_k85ce"]
[ext_resource type="AudioStream" uid="uid://bbhf0ggioebuv" path="res://sounds/mpc/thonk.mp3" id="31_3kq86"]
[ext_resource type="AudioStream" uid="uid://dlxj53mw1156i" path="res://sounds/mpc/chords4.mp3" id="32_0jt7d"]
[ext_resource type="AudioStream" uid="uid://d2wblg63m0u7u" path="res://sounds/mpc/kick12.mp3" id="33_s7a68"]
[ext_resource type="AudioStream" uid="uid://hy2rhoip7d2e" path="res://sounds/clap1.mp3" id="34_em0fe"]
[ext_resource type="AudioStream" uid="uid://bx61j53mc7dey" path="res://sounds/mpc/chords3.mp3" id="34_pq0ry"]
[ext_resource type="AudioStream" uid="uid://q6es68chm46r" path="res://sounds/mpc/chords5.mp3" id="36_3uxv2"]
[ext_resource type="AudioStream" uid="uid://c1i8yt2p8ikml" path="res://sounds/mpc/voice1.mp3" id="37_l0ben"]
[ext_resource type="AudioStream" uid="uid://b26ck8mwdd26k" path="res://sounds/mpc/chords1.mp3" id="40_gbd2r"]
[ext_resource type="AudioStream" uid="uid://2u4q88x7y5sh" path="res://sounds/mpc/crash2.mp3" id="43_ijan0"]
[ext_resource type="AudioStream" uid="uid://dqsts3rwx46c1" path="res://sounds/mpc/deepKick.mp3" id="45_vsabx"]
[ext_resource type="AudioStream" uid="uid://c0lpa63fgls5e" path="res://sounds/mpc/clap4.mp3" id="46_84nv0"]
[ext_resource type="AudioStream" uid="uid://bh4gacpoawj0b" path="res://sounds/mpc/chords2.mp3" id="48_aavdd"]
[ext_resource type="AudioStream" uid="uid://ds1ngkn0km5ea" path="res://sounds/mpc/longSnare.mp3" id="49_bk0rn"]
[ext_resource type="AudioStream" uid="uid://b4fknvl50s1cj" path="res://sounds/mpc/wawoo.mp3" id="54_hfeyr"]
[ext_resource type="AudioStream" uid="uid://csgc37s07uxp4" path="res://sounds/kick1.mp3" id="54_sdqv7"]

[sub_resource type="AudioEffectPhaser" id="AudioEffectPhaser_o05jx"]
range_min_hz = 2000.0
range_max_hz = 5000.0
rate_hz = 10.0
feedback = 0.5

[sub_resource type="AudioEffectPhaser" id="AudioEffectPhaser_qj6mg"]
range_min_hz = 200.0
range_max_hz = 1000.0
rate_hz = 0.25

[sub_resource type="AudioEffectDistortion" id="AudioEffectDistortion_26tln"]
keep_hf_hz = 10000.0
drive = 0.5

[sub_resource type="AudioEffectDelay" id="AudioEffectDelay_bjr4s"]

[sub_resource type="AudioEffectLowPassFilter" id="AudioEffectLowPassFilter_wtows"]

[sub_resource type="AudioEffectPhaser" id="AudioEffectPhaser_3p600"]

[sub_resource type="AudioEffectPitchShift" id="AudioEffectPitchShift_rraci"]
pitch_scale = 2.0

[sub_resource type="AudioEffectBandPassFilter" id="AudioEffectBandPassFilter_t7u75"]
cutoff_hz = 1500.0

[sub_resource type="BoxShape3D" id="BoxShape3D_l7gtp"]
size = Vector3(2.5, 0.25, 2.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pag4q"]
transparency = 1
albedo_color = Color(0.0975999, 0.96, 0.0192, 0.309804)

[sub_resource type="BoxMesh" id="BoxMesh_h5p0a"]
material = SubResource("StandardMaterial3D_pag4q")
size = Vector3(2.5, 0.25, 2.5)

[node name="interactable_cube" type="Node3D"]
script = ExtResource("1_np1tr")

[node name="rotation_planes" type="Node3D" parent="." node_paths=PackedStringArray("hitzone")]
script = ExtResource("1_k4ukj")
default_material = ExtResource("2_te6jk")
highlighted_material = ExtResource("3_q83r8")
hitzone = NodePath("../hitzone")

[node name="bottom_horizontal_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.05, 0, -1.05)

[node name="middle_horizontal_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.05, 1.05, -1.05)

[node name="top_horizontal_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.05, 2.1, -1.05)

[node name="left_vertical_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, -1.05)

[node name="middle_vertical_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 1.05, -1.05)

[node name="right_vertical_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 1.05, -1.05)

[node name="front_face_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.05, 1.05, 0)

[node name="middle_face_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.05, 1.05, -1.05)

[node name="back_face_plane" parent="rotation_planes" instance=ExtResource("9_2xpmb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.05, 1.05, -2.1)

[node name="cublets" type="Node3D" parent="."]
script = ExtResource("5_mwdhc")
material = ExtResource("6_5bekk")
material2 = ExtResource("7_e54xb")
material3 = ExtResource("8_y4kj5")

[node name="Bottom row" type="Node3D" parent="cublets"]

[node name="Cubelet" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)

[node name="beatPad" parent="cublets/Bottom row/Cubelet" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("12_foqmi")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("13_r3l4c")

[node name="Cubelet2" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]

[node name="beatPad" parent="cublets/Bottom row/Cubelet2" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("14_1eq0i")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet2" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("15_m6fha")

[node name="beatPad3" parent="cublets/Bottom row/Cubelet2" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("16_m1cy3")

[node name="Cubelet3" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, 0)

[node name="beatPad" parent="cublets/Bottom row/Cubelet3" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
hitsound = ExtResource("34_em0fe")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet3" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("18_eopfk")

[node name="beatPad3" parent="cublets/Bottom row/Cubelet3" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("19_lgxiu")

[node name="Cubelet4" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -1.05)

[node name="beatPad" parent="cublets/Bottom row/Cubelet4" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("20_wq4h3")

[node name="Cubelet5" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05)

[node name="beatPad" parent="cublets/Bottom row/Cubelet5" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("21_hxfuh")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet5" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("22_7j8hd")

[node name="Cubelet6" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -1.05)

[node name="beatPad" parent="cublets/Bottom row/Cubelet6" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
hitsound = ExtResource("12_vbing")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet6" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("24_agb0u")

[node name="Cubelet7" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -2.1)

[node name="beatPad" parent="cublets/Bottom row/Cubelet7" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("25_0deu7")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet7" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("26_0uidl")

[node name="Cubelet8" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.1)

[node name="beatPad" parent="cublets/Bottom row/Cubelet8" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("27_mwsym")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet8" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("28_k85ce")

[node name="beatPad3" parent="cublets/Bottom row/Cubelet8" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("18_eopfk")

[node name="Cubelet9" parent="cublets/Bottom row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -2.1)

[node name="beatPad" parent="cublets/Bottom row/Cubelet9" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("14_uco0j")

[node name="beatPad2" parent="cublets/Bottom row/Cubelet9" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
hitsound = ExtResource("25_8mcsb")

[node name="beatPad3" parent="cublets/Bottom row/Cubelet9" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
hitsound = ExtResource("31_3kq86")

[node name="Middle row" type="Node3D" parent="cublets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)

[node name="Cubelet10" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)

[node name="beatPad" parent="cublets/Middle row/Cubelet10" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("32_0jt7d")

[node name="Cubelet11" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]

[node name="beatPad" parent="cublets/Middle row/Cubelet11" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("33_s7a68")

[node name="beatPad2" parent="cublets/Middle row/Cubelet11" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("34_pq0ry")

[node name="Cubelet12" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, 0)

[node name="switch" parent="cublets/Middle row/Cubelet12" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectPhaser_o05jx")

[node name="beatPad" parent="cublets/Middle row/Cubelet12" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("36_3uxv2")

[node name="Cubelet13" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -1.05)

[node name="Cubelet14" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05)

[node name="beatPad" parent="cublets/Middle row/Cubelet14" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0.00111675)
hitsound = ExtResource("37_l0ben")

[node name="Cubelet15" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -1.05)

[node name="switch" parent="cublets/Middle row/Cubelet15" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectPhaser_qj6mg")

[node name="Cubelet16" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -2.1)

[node name="beatPad" parent="cublets/Middle row/Cubelet16" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("12_7j6b7")

[node name="Cubelet17" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.1)

[node name="beatPad" parent="cublets/Middle row/Cubelet17" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("25_8mcsb")

[node name="beatPad2" parent="cublets/Middle row/Cubelet17" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0.00088954)
hitsound = ExtResource("40_gbd2r")

[node name="Cubelet18" parent="cublets/Middle row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -2.1)

[node name="beatPad" parent="cublets/Middle row/Cubelet18" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("14_uco0j")

[node name="switch" parent="cublets/Middle row/Cubelet18" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectDistortion_26tln")

[node name="Top row" type="Node3D" parent="cublets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="Cubelet19" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)

[node name="theremin" parent="cublets/Top row/Cubelet19" instance=ExtResource("11_gdqjp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
theremin_stream = ExtResource("12_g183w")

[node name="beatPad" parent="cublets/Top row/Cubelet19" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.000382662, 0, 0.5)
hitsound = ExtResource("43_ijan0")

[node name="Cubelet20" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]

[node name="theremin" parent="cublets/Top row/Cubelet20" instance=ExtResource("11_gdqjp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
theremin_stream = ExtResource("12_5hwqm")

[node name="beatPad" parent="cublets/Top row/Cubelet20" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("45_vsabx")

[node name="beatPad2" parent="cublets/Top row/Cubelet20" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("46_84nv0")

[node name="Cubelet21" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, 0)

[node name="switch" parent="cublets/Top row/Cubelet21" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectDelay_bjr4s")

[node name="theremin" parent="cublets/Top row/Cubelet21" node_paths=PackedStringArray("hitzone") instance=ExtResource("11_gdqjp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
hitzone = NodePath("../../../../hitzone")
theremin_stream = ExtResource("12_o2m7e")

[node name="beatPad" parent="cublets/Top row/Cubelet21" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.5)
hitsound = ExtResource("48_aavdd")

[node name="Cubelet22" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -1.05)

[node name="switch" parent="cublets/Top row/Cubelet22" node_paths=PackedStringArray("hitzone") instance=ExtResource("11_b33ay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
hitzone = NodePath("../../../../hitzone")
effect = SubResource("AudioEffectLowPassFilter_wtows")

[node name="Cubelet23" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05)

[node name="switch" parent="cublets/Top row/Cubelet23" node_paths=PackedStringArray("hitzone") instance=ExtResource("11_b33ay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
hitzone = NodePath("../../../../hitzone")
effect = SubResource("AudioEffectPhaser_3p600")

[node name="beatPad" parent="cublets/Top row/Cubelet23" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("49_bk0rn")

[node name="Cubelet24" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -1.05)

[node name="switch" parent="cublets/Top row/Cubelet24" instance=ExtResource("11_b33ay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="switch2" parent="cublets/Top row/Cubelet24" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectPitchShift_rraci")

[node name="Cubelet25" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -2.1)

[node name="beatPad" parent="cublets/Top row/Cubelet25" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
hitsound = ExtResource("14_fj5po")

[node name="beatPad2" parent="cublets/Top row/Cubelet25" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("25_oaica")

[node name="Cubelet26" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.1)

[node name="beatPad2" parent="cublets/Top row/Cubelet26" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("17_xy2l2")

[node name="beatPad" parent="cublets/Top row/Cubelet26" instance=ExtResource("11_rkwiu")]
transform = Transform3D(0.999967, 0, -0.00813315, 0, 1, 0, 0.00813315, 0, 0.999967, 0, 0.5, 0)
hitsound = ExtResource("12_foin1")

[node name="beatPad3" parent="cublets/Top row/Cubelet26" instance=ExtResource("11_rkwiu")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0, 0)
hitsound = ExtResource("54_hfeyr")

[node name="Cubelet27" parent="cublets/Top row" instance=ExtResource("9_sqj7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, -2.1)

[node name="beatPad" parent="cublets/Top row/Cubelet27" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
hitsound = ExtResource("54_sdqv7")

[node name="switch" parent="cublets/Top row/Cubelet27" instance=ExtResource("11_b33ay")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0, 0)
effect = SubResource("AudioEffectBandPassFilter_t7u75")

[node name="beatPad2" parent="cublets/Top row/Cubelet27" instance=ExtResource("11_rkwiu")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.5)
hitsound = ExtResource("24_epiv1")

[node name="clickSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("13_t2dqi")
volume_db = -25.0

[node name="hitzone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.025, 2.699, -1.025)
visible = false
collision_layer = 2
collision_mask = 2
script = ExtResource("13_ldtd0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitzone"]
shape = SubResource("BoxShape3D_l7gtp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="hitzone"]
mesh = SubResource("BoxMesh_h5p0a")
